--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>ProductAd.AI</title>
-		<meta name="description" content="Lovable Generated Project" />
-		<meta name="author" content="Lovable" />
+		<meta name="description" content="Generate stunning promotional content for your products using AI.
+		From images to videos with virtual influencers - all in seconds. Studio-quality ads, without the studio!" />
+		<meta name="author" content="Softwarify" />
 
 		<meta property="og:title" content="ProductAd.AI" />
 		<meta
 			property="og:description"
-			content="An AI powered product marketing app that helps you to generate marketing content"
+			content="Generate stunning promotional content for your products using AI.
+			From images to videos with virtual influencers - all in seconds. Studio-quality ads, without the studio!"
 		/>
 		<meta property="og:type" content="website" />
-		<meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+		<meta property="og:image" content="/image.png" />
 
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:site" content="@ProductAd.ai" />
-		<meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+		<meta name="twitter:image" content="/image.png" />
 	</head>
 
 	<body>
