--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>ProductAd.AI</title>
+		<title>ProductAd.AI - Studio-quality ads with AI, without the studio!</title>
 		<meta name="description" content="Generate stunning promotional content for your products using AI.
 		From images to videos with virtual influencers - all in seconds. Studio-quality ads, without the studio!" />
 		<meta name="author" content="Softwarify" />
@@ -15,11 +15,11 @@
 			From images to videos with virtual influencers - all in seconds. Studio-quality ads, without the studio!"
 		/>
 		<meta property="og:type" content="website" />
-		<meta property="og:image" content="/image.png" />
+		<meta property="og:image" content="https://productad-ai.vercel.app/" />
 
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:site" content="@ProductAd.ai" />
-		<meta name="twitter:image" content="/image.png" />
+		<meta name="twitter:image" content="https://productad-ai.vercel.app/" />
 	</head>
 
 	<body>
