--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="description" content="Generate stunning promotional content for your products using AI.
 		From images to videos with virtual influencers - all in seconds. Studio-quality ads, without the studio!" />
 		<meta name="author" content="Softwarify" />
+		<meta name="keywords" content="ai, marketing, commercial, ad, product, ugc, influencer" />
 
 		<meta property="og:title" content="ProductAd.AI" />
 		<meta
@@ -14,12 +15,6 @@
 			content="Generate stunning promotional content for your products using AI.
 			From images to videos with virtual influencers - all in seconds. Studio-quality ads, without the studio!"
 		/>
-		<meta property="og:type" content="website" />
-		<meta property="og:image" content="https://productad-ai.vercel.app/" />
-
-		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="twitter:site" content="@ProductAd.ai" />
-		<meta name="twitter:image" content="https://productad-ai.vercel.app/" />
 	</head>
 
 	<body>
